Bug 1607953.  Refactor our runnable metrics and long task code to make it more robust and correct.  r=jesup,tarek,froydnj

The idea is to use the slice-accounting setup from the performance counters for
idle tasks as well, and fix the various bugs we have when nested event loops
are involved.

The bit in nsThread::SizeOfEventQueues that counted memory for
mCurrentPerformanceCounter was wrong all along, I think: the docgroup that owns
the performance counter should account for it.

Differential Revision: https://phabricator.services.mozilla.com/D59596